[gd_scene load_steps=5 format=3 uid="uid://xh7qo3fjn53j"]

[ext_resource type="Script" uid="uid://4pijlebj0o3x" path="res://scripts/enemies/enemy_horde.gd" id="1_jjlyi"]
[ext_resource type="PackedScene" uid="uid://bua6k3b8bpnyc" path="res://models/enemy-humanoid.glb" id="2_x2h17"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jjlyi"]
radius = 0.35
height = 1.75

[sub_resource type="SphereShape3D" id="SphereShape3D_pjxt5"]
radius = 8.0

[node name="MeleeEnemy" type="CharacterBody3D" groups=["Enemy"]]
script = ExtResource("1_jjlyi")
damage_to_player = 25.0

[node name="enemy-humanoid" parent="." instance=ExtResource("2_x2h17")]

[node name="Skeleton3D" parent="enemy-humanoid/Armature" index="0"]
bones/0/position = Vector3(0.146303, -0.241278, -93.6566)
bones/0/rotation = Quaternion(-0.626086, -0.0735307, 0.0386922, 0.775314)
bones/1/rotation = Quaternion(0.0280586, 0.0466298, 0.053617, 0.997078)
bones/2/rotation = Quaternion(0.0386084, 0.0222296, 0.00294279, 0.999003)
bones/3/rotation = Quaternion(0.0386646, 0.0222173, 0.00368444, 0.998999)
bones/4/position = Vector3(9.76026e-07, 14.1457, -1.45171e-05)
bones/4/rotation = Quaternion(-0.0783439, 0.00431107, -0.00101139, 0.996917)
bones/5/rotation = Quaternion(-0.0966701, 0.00852358, -0.0554978, 0.993731)
bones/7/position = Vector3(5.46189, 12.2307, -0.0726804)
bones/7/rotation = Quaternion(-0.697464, -0.307824, 0.449495, -0.465556)
bones/8/position = Vector3(-3.04693e-06, 11.5678, -6.92775e-06)
bones/8/rotation = Quaternion(0.434458, 0.215758, -0.093585, 0.869446)
bones/9/position = Vector3(-8.85411e-07, 30.4723, -9.86893e-08)
bones/9/rotation = Quaternion(0.0165564, 2.58689e-05, 0.282921, 0.959)
bones/10/position = Vector3(-2.92452e-06, 25.8694, 1.77035e-07)
bones/10/rotation = Quaternion(0.0256128, -0.0241854, 0.130172, 0.990866)
bones/11/rotation = Quaternion(0.180185, 0.0299505, 0.339095, 0.922849)
bones/12/position = Vector3(0.0913718, 3.51681, -1.6049e-06)
bones/12/rotation = Quaternion(0.0743662, 0.0212874, -0.261481, 0.962104)
bones/13/position = Vector3(-0.255188, 3.47038, 7.39772e-07)
bones/13/rotation = Quaternion(-0.152632, -0.0387282, 0.150376, 0.976007)
bones/14/position = Vector3(0.163825, 3.40806, 1.66893e-06)
bones/15/rotation = Quaternion(0.528422, -0.0649561, 0.2019, 0.822063)
bones/16/position = Vector3(0.334773, 5.10597, -3.17658e-06)
bones/16/rotation = Quaternion(0.479787, 0.0041992, 0.0554261, 0.875623)
bones/17/rotation = Quaternion(0.399506, 0.0199024, 0.159132, 0.902594)
bones/19/position = Vector3(-5.46189, 12.2332, -0.122352)
bones/19/rotation = Quaternion(0.628616, -0.366169, 0.551696, 0.407915)
bones/20/position = Vector3(-1.16552e-06, 11.5678, -6.06653e-06)
bones/20/rotation = Quaternion(0.248726, -0.0067452, -0.350305, 0.902982)
bones/21/position = Vector3(5.11789e-07, 30.4713, -9.77491e-06)
bones/21/rotation = Quaternion(0.0359666, -3.08686e-05, -0.587547, 0.80839)
bones/22/position = Vector3(2.01547e-06, 25.8709, 2.96625e-06)
bones/22/rotation = Quaternion(-0.294999, -0.425035, 0.0524881, 0.854146)
bones/23/rotation = Quaternion(0.0830869, -0.0224933, -0.428296, 0.899529)
bones/24/position = Vector3(-0.0635124, 3.61526, -1.54773e-06)
bones/24/rotation = Quaternion(0.0912295, -0.0216809, 0.245298, 0.964902)
bones/25/position = Vector3(0.0838482, 3.48831, -1.51321e-05)
bones/25/rotation = Quaternion(-0.137293, 0.0367043, -0.044657, 0.988842)
bones/26/position = Vector3(-0.0203242, 3.0281, -2.20538e-06)
bones/27/position = Vector3(4.53429e-06, 8.06069, 0.0842121)
bones/27/rotation = Quaternion(0.683537, 0.0639228, -0.333978, 0.645872)
bones/28/position = Vector3(-0.241971, 5.02348, 5.18867e-06)
bones/28/rotation = Quaternion(0.468536, -0.0123655, -0.0876093, 0.879003)
bones/29/rotation = Quaternion(0.389633, -0.0175668, -0.235282, 0.890236)
bones/30/position = Vector3(-0.328925, 4.16331, 9.47714e-06)
bones/31/rotation = Quaternion(0.0271385, 0.474327, 0.879813, -0.0143708)
bones/32/rotation = Quaternion(-0.814788, -0.0326911, 0.056345, 0.576087)
bones/33/rotation = Quaternion(0.523111, 0.0292249, 0.215043, 0.824171)
bones/34/rotation = Quaternion(0.223241, -0.0492923, 0.0149326, 0.973402)
bones/36/rotation = Quaternion(-0.0944185, 0.221095, 0.97003, -0.0352711)
bones/37/rotation = Quaternion(-0.502574, 0.0920757, -0.0539426, 0.857923)
bones/38/rotation = Quaternion(0.538706, 0.00302565, -0.0267141, 0.842065)
bones/39/rotation = Quaternion(0.616505, 0.068893, -0.0247963, 0.783939)

[node name="BodyCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875, 0)
shape = SubResource("CapsuleShape3D_jjlyi")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = 1.0
debug_enabled = true

[node name="HitRaycast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, 1)
debug_shape_custom_color = Color(0, 0.471945, 8.66354e-07, 1)

[node name="BiteTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 4.2
one_shot = true

[node name="VisionArea" type="Area3D" parent="."]

[node name="ChaseRangeCollider" type="CollisionShape3D" parent="VisionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.992432, 0)
shape = SubResource("SphereShape3D_pjxt5")
debug_color = Color(0.994694, 0, 0.217901, 0.42)

[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="body_exited" from="VisionArea" to="." method="_on_vision_area_body_exited"]

[editable path="enemy-humanoid"]
